--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
 
 /* --- Components design --- */
 @import url("components/container.css");
+@import url("components/avatar.css");
+@import url("components/button.css");
+@import url("components/banner.css");
+@import url("components/card.css");
 /* TODO: import new components */
 
 /* --- Fonts & colors --- */
@@ -19,3 +23,8 @@ h1, h2, h3 {
 .text-center {
   text-align: center;
 }
+
+/*.cards {
+  display: flex;
+  justify-content: space-evenly;
+}*/
